--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "eslint": "^5.4.0"
+    "eslint": "^5.4.0",
+    "prettier": "^1.14.2"
   }
 }
