--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "navyget_auth_microservice",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node --presets es2015 server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,14 +28,23 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "mongodb": "^3.1.4",
     "mongoose": "^5.2.9",
     "validator": "^10.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-react": "^7.11.1",
+    "nodemon": "^1.18.4",
     "prettier": "^1.14.2"
   }
 }
